--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,16 +2,17 @@ server:
   port: 8181
 
 linux-do:
-  fuclaude: ${FUCLAUDE_PROXY}
+  fuclaude: ${FUCLAUDE_PROXY:https://demo.fuclaude.com}
   oaifree:
-    auth-api: ${OAIFREE_PROXY}
+    auth-api: ${OAIFREE_PROXY:https://new.oaifree.com}
     token-api: https://new.oaifree.com/api/auth/oauth_token
   oauth2:
+    enable: ${OAUTH2_ENABLE:true}
     client:
       registration:
-        client-id: ${CLIENT_ID}
-        client-secret: ${CLIENT_SECRET}
-        redirect-uri: ${REDIRECT_URI}
+        client-id: ${CLIENT_ID:0}
+        client-secret: ${CLIENT_SECRET:0}
+        redirect-uri: ${REDIRECT_URI:0}
         authorization-grant-type: authorization_code
         scope: read,write
       provider:
@@ -27,8 +28,25 @@ spring:
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
     enabled: true
+  mail:
+    host: ${SMTP_MAIL_HOST}
+    port: ${SMTP_MAIL_PORT}
+    username: ${SMTP_MAIL_USERNAME}
+    password: ${SMTP_MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+          socket:
+            factory:
+              class: javax.net.ssl.SSLSocketFactory
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
 
-admin-name: ${ADMIN_NAME}
+admin-name: ${ADMIN_NAME:admin}
 chat_site: ${CHAT_SITE}
+stmp:
+  enable: ${SMTP_ENABLE:false}
+  admin-email: ${ADMIN_EMAIL:}
