添加默认的chat site

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -47,7 +47,7 @@ mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
 
 admin-name: ${ADMIN_NAME:admin}
-chat_site: ${CHAT_SITE}
+chat_site: ${CHAT_SITE:https://next.yeelo.top}
 
 mirror:
   enable: ${MIRROR_ENABLE:false}
