全新的功能——MJ画图

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -51,7 +51,7 @@ chat_site: ${CHAT_SITE:https://next.yeelo.top}
 task:
   refresh: ${REFRESH_TASK_EXPRESSION:0 0 2 * * ?}  # 使用环境变量，冒号后面是默认值
 midjourney:
-    url: ${MJ_URL:https://midjourney.yeelo.fun}
+    url: ${MJ_URL:https://discord.com}
     key: ${MJ_KEY:}
 
 
