优化 docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,19 +20,21 @@ services:
       SMTP_MAIL_PASSWORD: "your_password"             # 12.邮件服务器密码
       MIRROR_ENABLE: true                             # 13.是否启用MIRROR镜像
       MIRROR_HOST: http://localhost:50002             # 14.填写你的mirror服务地址，由于该地址会直接在页面跳转，建议填写域名，避免局域网外无法访问/ip泄漏等问题
-      MIRROR_ENABLE: true                             # 15.是否启用Midjourney画图，默认关闭
-      MIRROR_HOST: http://localhost:50002             # 16.Midjourney Proxy地址，使用域名或公网ip+端口访问
+      MJ_ENABLE: true                                 # 15.是否启用Midjourney画图，默认关闭
+      MJ_HOST: http://localhost:50002                 # 16.Midjourney Proxy地址，使用域名或公网ip+端口访问
+      MJ_KEY: 123456                                  # 17.Midjourney 管理员密码
+      REFRESH_TASK_EXPRESSION: 0 0 2 * * ?            # 18.access token 定时刷新频率,默认每天凌晨 2 点,非必填
     ports:
-      - "8181:8181"                                   # 17.如需修改端口，请修改第一个8181为你需要访问的服务器端口
+      - "8181:8181"                                   # 19.如需修改端口，请修改第一个8181为你需要访问的服务器端口
     restart: always
   mirror:
     image: dairoot/chatgpt-gateway:latest
     environment:
       ENABLE_MIRROR_API: false
-      PROXY_URL_POOL: ""                              # 18.选填，代理地址用逗号分隔,如：“http://username:password@ip:port,socks5://username:password@ip:port”
+      PROXY_URL_POOL: ""                              # 20.选填，代理地址用逗号分隔,如：“http://username:password@ip:port,socks5://username:password@ip:port”
       REDIS_URL: redis://redis:6379/0
     ports:
-      - "50002:8787"                                  # 19.如需修改端口，请修改第一个8181为你需要访问的服务器端口
+      - "50002:8787"                                  # 21.如需修改端口，请修改第一个8181为你需要访问的服务器端口
     restart: always
     depends_on:
       - redis
@@ -43,14 +45,14 @@ services:
     ports:
       - "127.0.0.1:16379:6379"
     volumes:
-      - ./redis-data:/data                            # 20.指定宿主机的redis数据挂载目录
+      - ./redis-data:/data                            # 22.指定宿主机的redis数据挂载目录
     command: ["redis-server","--appendonly","yes" ]
   cf5s:
     image: dairoot/cf5s:latest
     restart: always
     environment:
       CHATGPT_GATEWAY_URL: "http://mirror:8787"
-      #PROXY_URL_POOL: ""                             # 21.选填，代理地址用逗号分隔,如：“http://username@password@ip:port,socks5://username@password@ip:port”
+      #PROXY_URL_POOL: ""                             # 23.选填，代理地址用逗号分隔,如：“http://username@password@ip:port,socks5://username@password@ip:port”
 
   # 更多部署细节请参考：https://github.com/trueai-org/midjourney-proxy
   mjopen:
@@ -58,7 +60,7 @@ services:
     container_name: mjopen
     restart: always
     ports:
-      - "8080:8080"                                   # 22.如需修改端口，请修改第一个8080为你需要访问的服务器端口
+      - "8080:8080"                                   # 24.如需修改端口，请修改第一个8080为你需要访问的服务器端口
     user: "root"
     environment:
       - TZ=Asia/Shanghai
@@ -76,4 +78,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/db                                # 21.指定宿主机的数据库挂载目录，必须使用绝对路径
+      device: /home/db                                # 25.指定宿主机的数据库挂载目录，必须使用绝对路径
