--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,58 +1,13 @@
 server:
-  port: 8181
+  port: ${SERVER_PORT:8181}
 
-linux-do:
-  fuclaude: https://demo.fuclaude.com
-  oaifree:
-    auth-api: https://new.oaifree.com
-    token-api: https://new.oaifree.com/api/auth/oauth_token
-  oauth2:
-    client:
-      registration:
-        # 如需调试，请编辑下方client-id、client-secret、redirect-uri
-        client-id: test
-        client-secret: test
-        redirect-uri: http://localhost:8181
-        authorization-grant-type: authorization_code
-        scope: read,write
-      provider:
-        authorization-uri: https://connect.linux.do/oauth2/authorize
-        token-uri: https://connect.linux.do/oauth2/token
-        user-info-uri: https://connect.linux.do/api/user
-        user-name-attribute: id
 spring:
-  mail:
-    enable: ${SMTP_ENABLE:false}
-    host: ${SMTP_MAIL_HOST:smtp.qq.com}
-    port: ${SMTP_MAIL_PORT:465}
-    username: ${SMTP_MAIL_USERNAME:0}
-    password: ${SMTP_MAIL_PASSWORD:0}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          ssl:
-            enable: true
-          socket:
-            factory:
-              class: javax.net.ssl.SSLSocketFactory
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-  datasource:
-    driver-class-name: org.sqlite.JDBC
-    # 如需调试，请在此处修改你的db文件位置
-    url: jdbc:sqlite:/Users/kyle/IdeaProjects/linuxdo-auth/src/main/resources/db/data.db
-    username:
-    password:
-  liquibase:
-    change-log: classpath:db/changelog/db.changelog-master.xml
-    enabled: true
+  profiles:
+    include:
+        - ${DB_TYPE:sqlite}  # 默认使用sqlite，可通过环境变量DB_TYPE切换为mysql
+        - prod
   main:
     allow-circular-references: true
-  # 如需调试，请注释此处配置环境代码
-  profiles:
-    active: prod
+
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*.xml
-# 如需调试，请修改你的管理员用户名，默认密码为123456
-admin-name: yeelo
