--- a/src/main/resources/application-sqlite.yaml
+++ b/src/main/resources/application-sqlite.yaml
@@ -3,13 +3,7 @@ spring:
     change-log: classpath:db/changelog/db.changelog-master.xml
     enabled: true
   jpa:
-    hibernate:
-      ddl-auto: ${JPA_DDL_AUTO:none}
-    show-sql: ${JPA_SHOW_SQL:false}
-    database-platform: fun.yeelo.oauth.config.SQLiteDialect
-    properties:
-      hibernate:
-        dialect: fun.yeelo.oauth.config.SQLiteDialect
+    database-platform: org.hibernate.dialect.MySQLDialect
   datasource:
     driver-class-name: org.sqlite.JDBC
     url: jdbc:sqlite:/app/db/data.db
